# test_cmake_sver

./: CMakeLists.txt  README.md  main.cpp  v2.0.0.html  version.h.in
cmake/: GitVersion.cmake
